# MultiplayerSample

./: .gitignore  CMakeLists.txt
assets/pixel_game/config/: credit.txt  keybinds.json
docs/: PROJECT_NOTES.md
include/: main.h  player.h  screen_manager.h  sound_manager.h
include/input/: device.h  input.h  keybind.h
include/manager/: ClientManager.h  client_manager.h  console_manager.h  server_manager.h
include/network/: client.h  packets.h  server.h
include/network/packets/: connect_packet.h  player_disconnect_packet.h  player_join_packet.h  player_update_packet.h
include/ui/: element.h  screen.h
include/ui/elements/: button.h
include/ui/screen/: credits.h  main_menu.h
include/util/: Draw.h  dev.h  draw.h  net.h  numbers.h  resource_loader.h
include/util/dev/: commands.h
include/util/dev/command/: registry.h
include/util/dev/console/: console.h  dev.h
include/util/dev/console/command/: auto_completion.h  registry.h
include/util/dev/console/command/commands/: core_command.h
src/: main.cpp  screen_manager.cpp  sound_manager.cpp
src/input/: input.cpp  keybind.cpp
src/manager/: ClientManager.cpp  ConsoleManager.cpp  ServerManager.cpp  client_manager.cpp  server_manager.cpp
src/network/: client.cpp  packets.cpp  server.cpp
src/ui/: element.cpp  screen.cpp
src/ui/elements/: button.cpp
src/ui/screen/: credits.cpp
src/util/: Draw.cpp  dev.cpp  draw.cpp  net.cpp  numbers.cpp  resource_loader.cpp
src/util/dev/: commands.cpp
src/util/dev/command/: auto_completion.cpp  registry.cpp
src/util/dev/command/commands/: core_command.cpp
src/util/dev/console/: console.cpp  dev.cpp
src/util/dev/console/command/: auto_completion.cpp  registry.cpp
src/util/dev/console/command/commands/: core_command.cpp
